# DRDO-Inter-IIT-UAV-UGV-Challenge

./: README.md  readme.md
drdo_22/: CMakeLists.txt  package.xml
interiit22/: CMakeLists.txt  package.xml
interiit22/launch/: drdo_flat_world.launch  drdo_world1.launch  drdo_world1_white.launch  drdo_world2.launch  drdo_world2_white.launch  drdo_world3.launch
interiit22/models/gimbal_small_2d/: model.sdf
interiit22/world/: drdo_world1.world  drdo_world1_white.world  drdo_world2.world  drdo_world2_white.world  iris_arducopter_runway.world
solution/: CMakeLists.txt  package.xml
solution/scripts/: car_control.py  car_utils.py  cubic_spline_planner.py  drone_utils.py  model_state_jump.py  prius_controller.py  setpoint_collecter.py  setpoints.txt  setpoints_w3.txt  setpoints_w3_with_z.txt  summer_mapping.py
solution/scripts/mapper/: camera.py  mapping.py  road.py
solution/whatever/: broadcaster.py
